# infinite-universe

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  make.sh  setup.sh
src/: color.hpp  main.cpp
src/model/: model.hpp
src/ui/: jui.cpp  jui.hpp
src/unigen/: fast_rand.cpp  fast_rand.hpp  unigen.cpp  unigen.hpp
